<resources>
    <string name="app_name">Preview Video</string>

    <!-- EntryPoint -->
    <string name="toast_appNotFound">The package \'%s\' can\'t be opened.</string>
    <string name="toast_noApps">No apps available</string>
    <string name="toast_noChooser">Can\'t open chooser</string>
    <string name="title_chooser">Choose app</string>

    <!-- MainActivity -->
    <string name="a_about">About</string>
    <string name="txt_info">With this app you can open YouTube videos as an immobile popup in the middle of the screen that is closed automatically when the video ends, or can be closed with a single click on the back button. They will also not be added to your view history (so no more recommendations because someone sent you a goose video). Note that this is not PIP (Picture In Picture) so you can\'t use other apps while previewing.</string>
    <string name="txt_about">"App created by TrianguloY.

Notice: This app is not affiliated with YouTube nor Google. This is a third party app that uses the YouTube Api and doesn't replace any of the YouTube features."</string>
    <string name="toast_noBrowser">Can\'t open the browser</string>
    <string name="btn_appPage">Open app page</string>
    <string name="btn_openStore">Open Play Store</string>
    <string name="abt_shareStore">Share app</string>

    <string name="a_setup">Setup</string>
    <string name="txt_setAsDefault">This app is currently not shown when opening Youtube Links.</string>
    <string name="txt_opener">The current Android setting is set to open YouTube links with the app: \'%s\'.</string>
    <string name="txt_instructions">"

To be able to open as preview you must set this app as the default by following this instructions:
1) Press the button to open the Android Settings.
2) Go to 'Open by default' (you may need to press on 'Advanced' first)
3) Select 'Open supported links'->'Open in this app' (even though it is called that, you will be asked which app you prefer to set as the default)
If 'Open in this app' is already selected, select other option and then that one (otherwise the change isn't applied)"</string>
    <string name="btn_setAsDefault">Android settings</string>
    <string name="toast_noSettings">Can\'t open the Android settings</string>
    <string name="desc_app">Choose in which app videos will be opened, in case you have multiple YouTube variants.</string>
    <string name="spinner_none">None</string>
    <string name="desc_fullscreen">Display videos in landscape fullscreen, instead of windowed portrait/landscape.</string>
    <string name="chx_fullscreen">Landscape fullscreen</string>
    <string name="txt_testLink">Everything is ready! Here is an example video: Click the link to test the app and the settings (the video is just the default Youtube logo).</string>
    <string name="txtL_testLink">https://www.youtube.com/watch?v=Y7dpJ0oseIA</string>

    <!-- General -->
    <string name="toast_error">An error occurred</string>

</resources>
