<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".activities.main.SetupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/stp_ll_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stp_txt_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@android:drawable/stat_notify_error"
                android:text="@string/txt_instructions" />

            <Button
                android:id="@+id/stp_btn_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onButtonClick"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:text="@string/btn_setAsDefault" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="@dimen/padding"
                android:layout_marginBottom="@dimen/padding"
                android:src="@color/colorPrimary"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_app" />

        <Spinner
            android:id="@+id/stp_spn_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_margin="@dimen/padding"
            android:src="@color/colorPrimaryDark"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_fullscreen" />

        <CheckBox
            android:id="@+id/stp_chkbx_fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chx_fullscreen" />

        <LinearLayout
            android:id="@+id/stp_ll_testLink"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="@dimen/padding"
                android:layout_marginBottom="@dimen/padding"
                android:src="@color/colorPrimary"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_testLink" />

            <TextView
                android:id="@+id/stp_txtL_testLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onButtonClick"
                android:paddingTop="@dimen/padding"
                android:paddingBottom="@dimen/padding"
                android:text="@string/txtL_testLink" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>