<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".activities.main.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_about" />

        <Button
            android:id="@+id/abt_btn_appPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding"
            android:drawableLeft="@android:drawable/ic_menu_set_as"
            android:drawablePadding="@dimen/padding"
            android:onClick="onButtonClick"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:text="@string/btn_appPage" />

        <Button
            android:id="@+id/abt_btn_openStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding"
            android:drawableLeft="@android:drawable/ic_media_play"
            android:drawablePadding="@dimen/padding"
            android:onClick="onButtonClick"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:text="@string/btn_openStore" />

        <Button
            android:id="@+id/abt_btn_shareStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding"
            android:drawableLeft="@android:drawable/ic_menu_share"
            android:drawablePadding="@dimen/padding"
            android:onClick="onButtonClick"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:text="@string/abt_shareStore" />
    </LinearLayout>
</ScrollView>